--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,35 @@
-body::before{display:block;content:"";height:100px}body::after{display:block;content:"";height:60px}.animation{animation:all 5s ease-in-out;animation-iteration-count:6}@keyframes all{to{opacity:.5;transform:perspective(1000px) scale(0.9)}from{opacity:2;transform:perspective(1000px) scale(1)}}
+* {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+}
+
+body {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+body::before {
+  display: block;
+  content: "";
+  height: 100px;
+}
+
+body::after {
+  display: block;
+  content: "";
+  height: 60px;
+}
+
+.animation {
+  animation: all 5s ease-in-out;
+  animation-iteration-count: 6;
+}
+
+@keyframes all {
+  to {
+    opacity: 0.5;
+    transform: perspective(1000px) scale(0.9);
+  }
+  from {
+    opacity: 2;
+    transform: perspective(1000px) scale(1);
+  }
+}
