--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,10 @@
+*{
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+}
+body{
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
 body::before{
     display: block;
     content: '';
